<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_main"
    android:background="@color/background_gray"
    tools:context=".ConfiguracionActivity">

    <TextView
        android:id="@+id/tv_config_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_ajustes"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        android:textColor="@color/text_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_config_avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_config_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_config_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/label_config_welcome_default"
        android:textSize="@dimen/text_welcome"
        android:textColor="@color/primary_purple"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/iv_config_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_config_apodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/hint_apodo"
        android:inputType="textPersonName"
        android:backgroundTint="@color/primary_purple"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="@dimen/drawable_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_config_welcome"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_config_moneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/label_moneda"
        android:inputType="textCapCharacters"
        android:backgroundTint="@color/primary_purple"
        android:drawableStart="@drawable/ic_money"
        android:drawablePadding="@dimen/drawable_padding"
        app:layout_constraintTop_toBottomOf="@id/et_config_apodo"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_config_guardar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/btn_guardar_ajustes"
        android:textAllCaps="false"
        android:textSize="@dimen/text_button"
        android:backgroundTint="@color/primary_purple"
        app:layout_constraintTop_toBottomOf="@id/et_config_moneda"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>