<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://tools.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_main"
    android:background="@color/background_gray"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_top_logo"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:src="@drawable/ic_settings"
        app:tint="@color/primary_purple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_main_icon"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_marginEnd="@dimen/margin_xsmall"
            android:src="@drawable/ic_logo_cashflow"
            app:tint="@color/primary_purple" />

        <TextView
            android:id="@+id/tv_brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_name"
            android:textSize="@dimen/text_brand"
            android:textStyle="bold"
            android:textColor="@color/text_black" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_title"
        android:textSize="@dimen/text_subtitle"
        android:textStyle="bold"
        android:textColor="@color/text_gray"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/iv_top_logo"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xsmall"
        android:hint="@string/hint_descripcion"
        android:inputType="textCapSentences"
        android:backgroundTint="@color/primary_purple"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="@dimen/drawable_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_monto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xsmall"
        android:hint="@string/hint_monto"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/primary_purple"
        android:drawableStart="@drawable/ic_money"
        android:drawablePadding="@dimen/drawable_padding"
        app:layout_constraintTop_toBottomOf="@id/et_descripcion"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sp_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xsmall"
        android:minHeight="@dimen/spinner_min_height"
        android:entries="@array/categorias_array"
        app:layout_constraintTop_toBottomOf="@id/et_monto"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/sp_categoria"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:layout_marginEnd="@dimen/margin_xsmall"
            android:text="@string/btn_cargar"
            android:textAllCaps="false"
            android:textSize="@dimen/text_button"
            android:background="@drawable/btn_primary_bg"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_ir_reportes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="@string/btn_ver_reportes"
            android:textAllCaps="false"
            android:textSize="@dimen/text_button"
            android:textColor="@color/primary_purple"
            android:background="@drawable/btn_secondary_bg"
            app:backgroundTint="@null" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_total_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/label_total"
        android:textSize="@dimen/text_total"
        android:textStyle="bold"
        android:textColor="@color/primary_purple"
        app:layout_constraintTop_toBottomOf="@id/layout_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_recientes_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/recientes_title"
        android:textSize="@dimen/text_subtitle"
        android:textStyle="bold"
        android:textColor="@color/text_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_total_display"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/tv_recientes_titulo"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/container_gastos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_list_bottom" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>